src/test/deca/context/valid/testMethodCall.deca
class A {
	int a = 0;
	int increment() {
		this.a = this.a+1;
		return a;
	}
	float b;
}
{
	int c;
	//int a;
	A a = new A();
	int b = a.increment();
	b= 3;
}

